compiler/test-data/parser/errors/theme/variant_missing_name.frel
module test

theme AppTheme {
    padding : u32 = 16

    variant {
        padding = 8
    }
}
